--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -42,7 +42,7 @@ version_locations = alembic/versions
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+asyncpg://ai_brain_user:ai_brain_password@localhost:5432/ai_brain_db
 
 
 [post_write_hooks]
