--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,13 @@ dependencies = [
     "pydantic-settings>=2.7.0",
     "alembic>=1.13.3",
     "sqlalchemy>=2.0.36",
-    "python-dotenv>=1.0.1"
+    "python-dotenv>=1.0.1",
+    "pymupdf>=1.24.10",
+    "python-docx>=1.1.2",
+    "transformers>=4.45.2",
+    "torch>=2.5.1",
+    "huggingface-hub>=0.26.2",
+    "sentence-transformers>=3.1.1"
 ]
 
 [project.optional-dependencies]
