--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "sentence-transformers>=3.1.1",
     "httpx>=0.28.1",
     "pypdf2>=3.0.1",
+    "psycopg2>=2.9.11",
 ]
 
 [project.optional-dependencies]
