--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/react": "^3.0.35",
     "ai": "^6.0.33",
+    "browserslist": "^4.28.1",
+    "caniuse-lite": "^1.0.30001764",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
