--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "httpx>=0.28.1",
     "pypdf2>=3.0.1",
     "psycopg2>=2.9.11",
+    "bcrypt>=5.0.0",
+    "jose>=1.0.0",
 ]
 
 [project.optional-dependencies]
