--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "pypdf2>=3.0.1",
     "psycopg2>=2.9.11",
     "bcrypt>=5.0.0",
-    "jose>=1.0.0",
+    "python-jose>=3.5.0",
 ]
 
 [project.optional-dependencies]
