--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "psycopg2>=2.9.11",
     "bcrypt>=5.0.0",
     "python-jose>=3.5.0",
+    "aiohttp>=3.13.3",
 ]
 
 [project.optional-dependencies]
