--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.133.1",
+    "huggingface-hub>=1.5.0",
+    "pydantic>=2.12.5",
+    "uvicorn>=0.41.0",
+]
